change head.html, add a new post

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -150,7 +150,8 @@
 
   <meta property="twitter:title" content="{{ title }}">
   <meta property="twitter:description" content="{{ description }}">
-
+  <meta name="fediverse:creator" content="@pulganw@rebel.ar">
+  
   {% if img != "" %}
   <meta name="twitter:image" content="{{ img | absolute_url }}">
   {% endif %}
